# remover_fundo

./: .render.yaml  app.py  main.py  pyproject.toml  requirements.txt
rembg/: _version.py
