[tool.poetry]
name = "remover_fundo"
version = "0.1.0"
description = "Projeto para remover fundo de imagens"
authors = ["Seu Nome <caiojmagni@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.25.1"
rembg = "^2.0.0"
pillow = "^8.2.0"
onnxruntime = "^1.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

services:
  - type: web
    name: meu-app
    env: python
    buildCommand: pip install -r requirements.txt
    startCommand: gunicorn app:app
